# localstack-extension-ecs-traefik-compat

./: .gitignore  README.md  init.tf  lets.yaml  pyproject.toml
.github/workflows/: release.yaml
src/localstack_extension_ecs_traefik_compat/: __init__.py  extension.py
